--- a/.github/workflows/workflow_caller.yml
+++ b/.github/workflows/workflow_caller.yml
@@ -3,5 +3,10 @@ on: workflow_dispatch
 
 jobs:
   caller1:
-    steps:
-      - run: echo "Does nothing"
+    uses: tjanuario/actions_demo/.github/workflows/workflow_called@develop
+    with:
+      variable: My variable
+  caller2:
+    uses: tjanuario/actions_demo/.github/workflows/workflow_called@develop
+    with:
+      variable: Another variable
