--- a/.github/workflows/workflow_caller.yml
+++ b/.github/workflows/workflow_caller.yml
@@ -3,6 +3,10 @@ on: workflow_dispatch
 
 jobs:
   caller1:
+    strategy:
+      fail-fast: false
+      matrix: 
+        variable: ["one", "two", "three"]
     uses: tjanuario/actions_demo/.github/workflows/workflow_called.yml@develop
     with:
       variable: My variable
