--- a/.github/workflows/pull_as_aggregator.yml
+++ b/.github/workflows/pull_as_aggregator.yml
@@ -13,12 +13,26 @@ jobs:
           script: |
             var comment = "";
             try {
-              const result = await github.actions.createWorkflowDispatch({
+              const result = await github.pulls.get({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 pull_number: 14
               });
               var id = result.number;
+              const list = await github.issues.listComments({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: id
+              });
+              for(var index in list) {
+                comment += list[index].body;
+              }
+              await github.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: id
+                body: comment
+              });
             } catch (err) {
               core.setFailed(`Request failed with error ${err}`);
             }
