--- a/.github/workflows/pull_as_aggregator.yml
+++ b/.github/workflows/pull_as_aggregator.yml
@@ -2,6 +2,7 @@ name: "pull as aggregator"
 
 on:
   workflow_dispatch:
+  push:
 
 jobs:
   get_pull:
@@ -13,10 +14,26 @@ jobs:
           script: |
             var comment = "";
             try {
-              const result = await github.pulls.get({
+              const { result: data } = await github.pulls.get({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 pull_number: 14
+              });
+              console.log(result);
+              var id = result.number;
+              const { list: data } = await github.issues.listComments({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: id
+              });
+              for(var index in list) {
+                comment += list[index].body;
+              }
+              await github.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: id
+                body: comment
               });
             } catch (err) {
               core.setFailed(`Request failed with error ${err}`);
