--- a/.github/workflows/pull_as_aggregator.yml
+++ b/.github/workflows/pull_as_aggregator.yml
@@ -20,6 +20,11 @@ jobs:
                 pull_number: 14
               });
               var id = result.number;
+              const { data: list } = await github.issues.listComments({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: id
+              });
             } catch (err) {
               core.setFailed(`Request failed with error ${err}`);
             }
