--- a/.github/workflows/pull_as_aggregator.yml
+++ b/.github/workflows/pull_as_aggregator.yml
@@ -35,5 +35,5 @@ jobs:
                 body: comment
               });
             } catch (err) {
-              core.setFailed(`Request failed with error ${err}`);
+              core.setFailed(`Request has failed with error ${err}`);
             }
