--- a/.github/workflows/pull_as_aggregator.yml
+++ b/.github/workflows/pull_as_aggregator.yml
@@ -25,6 +25,7 @@ jobs:
                 repo: context.repo.repo,
                 issue_number: id
               });  
+              console.log(list);
             } catch (err) {
               core.setFailed(`Request has failed with error ${err}`);
             }
