--- a/.github/workflows/pull_as_aggregator.yml
+++ b/.github/workflows/pull_as_aggregator.yml
@@ -26,6 +26,15 @@ jobs:
                 issue_number: id
               });  
               console.log(list);
+              for(var index in list) {
+                comment += list[index].body;
+              }
+              await github.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: id
+                body: comment
+              });
             } catch (err) {
               core.setFailed(`Request has failed with error ${err}`);
             }
