--- a/.github/workflows/pull_as_aggregator.yml
+++ b/.github/workflows/pull_as_aggregator.yml
@@ -20,21 +20,12 @@ jobs:
                 pull_number: 14
               });
               var id = result.number;
-              const { data: list } = await github.issues.listComments({
+              const list = await github.issues.listComments({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 issue_number: id
               });  
               console.log(list);
-              for(var index in list) {
-                comment += list[index].body;
-              }
-              await github.issues.createComment({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                issue_number: id
-                body: comment
-              });
             } catch (err) {
               core.setFailed(`Request has failed with error ${err}`);
             }
