--- a/.github/workflows/pull_as_aggregator.yml
+++ b/.github/workflows/pull_as_aggregator.yml
@@ -20,7 +20,7 @@ jobs:
                 pull_number: 14
               });
               var id = result.number;
-              const list = await github.issues.listComments({
+              const { data: list } = await github.issues.listComments({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 issue_number: id
