--- a/.github/workflows/pull_as_aggregator.yml
+++ b/.github/workflows/pull_as_aggregator.yml
@@ -29,7 +29,13 @@ jobs:
               list.forEach(function(item){
                 comment += item.body;
               });
-              console.log(comment);
+              console.log(comment);              
+              var result = await github.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: id
+                body: comment
+              });
             } catch (err) {
               core.setFailed(`Request has failed with error ${err}`);
             }
