--- a/.github/workflows/pull_as_aggregator.yml
+++ b/.github/workflows/pull_as_aggregator.yml
@@ -30,6 +30,12 @@ jobs:
                 comment += item.body;
               });
               console.log(comment); 
+              var b = await github.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: id,
+                body: comment
+              });
             } catch (err) {
               core.setFailed(`Request has failed with error ${err}`);
             }
