--- a/.github/workflows/pull_as_aggregator.yml
+++ b/.github/workflows/pull_as_aggregator.yml
@@ -42,7 +42,7 @@ jobs:
                 issue_number: pull.number
               });
               var summary_comment_id = 0;
-              comments.forEach(function(comment){
+              comments.forEach(async function(comment){
                 if (comment.body.startsWith(SUMMARY_TEXT)) {
                   summary_comment_id = comment.id;
                   await github.issues.updateComment({                    
