comment_id to comment.id

--- a/.github/workflows/pull_as_aggregator.yml
+++ b/.github/workflows/pull_as_aggregator.yml
@@ -48,7 +48,7 @@ jobs:
                   await github.issues.updateComment({                    
                     owner: context.repo.owner,
                     repo: context.repo.repo,
-                    comment_id: comment_id,
+                    comment_id: comment.id,
                     body: SUMMARY_TEXT
                   })
                   break;
