--- a/.github/workflows/pull_as_aggregator.yml
+++ b/.github/workflows/pull_as_aggregator.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Get Branch
         id: get_branch
         run: | 
-          console.log(`::set-output name=pr_number::${{ env.pr_number }}`)
+          echo "::set-output name=pr_number::${{ env.pr_number }}"
 
       # Create or clear a summary comment that will contain the aggregated summary records for the commands.
       - name: Create summary comment
