--- a/.github/workflows/pull_as_aggregator.yml
+++ b/.github/workflows/pull_as_aggregator.yml
@@ -129,7 +129,7 @@ jobs:
                 if (err) throw err;
                 // Create a summary comment
                 var comment = process.env.NONCE_WORD + "\n"
-                comment += /tmp/blah/boom/${{ matrix.customer_root}}\n" 
+                comment += "/tmp/blah/boom/${{ matrix.customer_root}}\n" 
                 comment += data                
                 await github.issues.createComment({
                   owner: context.repo.owner,
