--- a/.github/workflows/pull_as_aggregator.yml
+++ b/.github/workflows/pull_as_aggregator.yml
@@ -143,7 +143,6 @@ jobs:
               core.setFailed(`Request failed with error ${err}`)
             }
   
-  
   aggregate_terraform_summary_records:
     name: Aggregate terraform results
     if: ${{ always() }}
@@ -170,7 +169,7 @@ jobs:
               var { data: comments } = await github.issues.listComments({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
-                issue_number: issue_number
+                issue_number: process.env.ISSUE_NUMBER
               });
               // Loop through to identify summaries, add individual summary to the aggregated summary_comment variable
               // and add the comment id to an array
