--- a/.github/workflows/pull_as_aggregator.yml
+++ b/.github/workflows/pull_as_aggregator.yml
@@ -177,7 +177,7 @@ jobs:
               var summary_comment = 'Terraform Summary:'
               comments.forEach( function(comment) {
                 if (comment.body.startsWith(process.env.NONCE_WORD)) {
-                  summary_comment += "\n" + comment.body.replace(NONCE_STRING, '') + "\n";
+                  summary_comment += "\n" + comment.body.replace(NONCE_WORD, '') + "\n";
                   delete_list.push(comment.id);
                 }
               });
