--- a/.github/workflows/pull_as_aggregator.yml
+++ b/.github/workflows/pull_as_aggregator.yml
@@ -170,14 +170,16 @@ jobs:
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 issue_number: process.env.ISSUE_NUMBER
-              });
-              console.log(comments);
+              });              
               // Loop through to identify summaries, add individual summary to the aggregated summary_comment variable
               // and add the comment id to an array
               var delete_list = []             
               var summary_comment = 'Terraform Summary:'
               for (let comment of comments) {
+                console.log(process.env.NONCE_WORD);
+                console.log(comment);
                 if (comment.body.startsWith(process.env.NONCE_WORD)) {
+                  log('hit');
                   summary_comment += "\n" + comment.body.replace(NONCE_WORD, '') + "\n";
                   delete_list.push(comment.id);
                 }
