--- a/.github/workflows/pull_as_aggregator.yml
+++ b/.github/workflows/pull_as_aggregator.yml
@@ -170,7 +170,8 @@ jobs:
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 issue_number: process.env.ISSUE_NUMBER
-              });              
+              });     
+              console.log(comments.length)         
               // Loop through to identify summaries, add individual summary to the aggregated summary_comment variable
               // and add the comment id to an array
               var delete_list = []             
